kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: PublisherService
  labels:
    app: PublisherService
  name: PublisherService
spec:
  ports:
  
    - protocol: TCP
      port: 8002
      targetPort: 8002
   
  selector:
    app: PublisherService
  type: ClusterIP
