kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: PublisherService
  name: Publisher-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: Publisher.example.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: PublisherService
            port:
              number: 8002
